fix for image scroll improvement on small screens
now including more graphics

--- a/doxygen-awesome.css
+++ b/doxygen-awesome.css
@@ -1660,7 +1660,7 @@ hr {
 }
 
 @media screen and (max-width: 767px) {
-    .contents > .dyncontent > .center, .contents > center {
+    .contents .dyncontent > .center, .contents > center {
         margin-left: calc(0px - var(--spacing-large));
         margin-right: calc(0px - var(--spacing-large));
         max-width: calc(100% + 2 * var(--spacing-large));
